@@ -131,7 +131,7 @@ class DBFieldTagWriterTest(unittest.TestCase):
         tdw.openNXFile()
         tdw.xmlSettings = xml
         if json:
-            tdw.json = json
+            tdw.thejson = json
         tdw.openEntry()
         return tdw
 
@@ -140,7 +140,7 @@ class DBFieldTagWriterTest(unittest.TestCase):
     # \param json JSON Record with client settings
     def closeWriter(self, tdw, json = None):
         if json:
-            tdw.json = json
+            tdw.thejson = json
         tdw.closeEntry()
         tdw.closeNXFile()
 
