@@ -116,7 +116,7 @@ class TangoDataWriterTest(unittest.TestCase):
             tdw.fileName = fname
             self.assertEqual(tdw.fileName, fname)
             self.assertEqual(tdw.xmlSettings, "")
-            self.assertEqual(tdw.json, "{}")
+            self.assertEqual(tdw.thejson, "{}")
             self.assertTrue(tdw.getNXFile() is None)
             self.assertTrue(tdw.numThreads > 0)
             self.assertTrue(isinstance(tdw.numThreads,(int, long)))
@@ -129,7 +129,7 @@ class TangoDataWriterTest(unittest.TestCase):
             tdw.closeNXFile()
             self.assertEqual(tdw.fileName, fname)
             self.assertEqual(tdw.xmlSettings, "")
-            self.assertEqual(tdw.json, "{}")
+            self.assertEqual(tdw.thejson, "{}")
             self.assertTrue(tdw.getNXFile() is None)
             self.assertTrue(tdw.numThreads > 0)
             self.assertTrue(isinstance(tdw.numThreads,(int, long)))
@@ -197,7 +197,7 @@ class TangoDataWriterTest(unittest.TestCase):
             tdw.fileName = fname
             self.assertEqual(tdw.fileName, fname)
             self.assertEqual(tdw.xmlSettings, "")
-            self.assertEqual(tdw.json, "{}")
+            self.assertEqual(tdw.thejson, "{}")
             self.assertTrue(tdw.getNXFile() is None)
             self.assertTrue(tdw.numThreads > 0)
             self.assertTrue(isinstance(tdw.numThreads,(int, long)))
@@ -210,7 +210,7 @@ class TangoDataWriterTest(unittest.TestCase):
             tdw.closeNXFile()
             self.assertEqual(tdw.fileName, fname)
             self.assertEqual(tdw.xmlSettings, "")
-            self.assertEqual(tdw.json, "{}")
+            self.assertEqual(tdw.thejson, "{}")
             self.assertTrue(tdw.getNXFile() is None)
             self.assertTrue(tdw.numThreads > 0)
             self.assertTrue(isinstance(tdw.numThreads,(int, long)))
@@ -268,7 +268,7 @@ class TangoDataWriterTest(unittest.TestCase):
             self.assertFalse(tdw.getNXFile().readonly)
             self.assertEqual(tdw.fileName, fname)
             self.assertNotEqual(tdw.xmlSettings, "")
-            self.assertEqual(tdw.json, "{}")
+            self.assertEqual(tdw.thejson, "{}")
             self.assertTrue(tdw.numThreads > 0)
             self.assertTrue(isinstance(tdw.numThreads,(int, long)))
 
