@@ -138,7 +138,7 @@ class TangoFieldTagWriterTest(unittest.TestCase):
         tdw.openNXFile()
         tdw.xmlSettings = xml
         if json:
-            tdw.json = json
+            tdw.thejson = json
         tdw.openEntry()
         return tdw
 
@@ -147,7 +147,7 @@ class TangoFieldTagWriterTest(unittest.TestCase):
     # \param json JSON Record with client settings
     def closeWriter(self, tdw, json = None):
         if json:
-            tdw.json = json
+            tdw.thejson = json
         tdw.closeEntry()
         tdw.closeNXFile()
 
