@@ -1,5 +1,7 @@
 2013-XX-XX Jan Kotanski <jankotan@gmail.com>
-	* adding logging Streams
+	* changing TangoDataWriter.json into TangoDataWriter.thejson
+	* changing parameters in TangoDataWriter constructor
+	* adding logging Streams 
 	* adding nexdatas_canfail=FAILED attribute
 	* tagged as 1.1.4
 
